<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/about"
        android:orderInCategory="40"
        android:title="@string/about"
        android:icon="@mipmap/ic_question"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/keyboard"
        android:orderInCategory="30"
        android:title="@string/scan_manually"
        android:icon="@mipmap/keyboard_small"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cancel"
        android:orderInCategory="20"
        android:title="@string/cancel"
        android:icon="@mipmap/cancel_small"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/message"
        android:orderInCategory="10"
        android:title=""
        android:icon="@mipmap/enveloppe"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mpm"
        android:orderInCategory="2"
        android:title=""
        android:icon="@mipmap/mpm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/alsace"
        android:orderInCategory="1"
        android:title=""
        android:icon="@mipmap/alsace"
        app:showAsAction="ifRoom" />
</menu>
